<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_notification" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_assignment"
            android:title="@string/nav_agenda" />
        <item
            android:id="@+id/nav_reg_status"
            android:icon="@drawable/ic_check_box"
            android:title="@string/nav_reg_status" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_content_paste"
            android:title="@string/nav_grades" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_date_range"
            android:title="@string/nav_schedule" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_lock"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
