<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/container_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_card"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextTitleSecondary"
            android:text="@string/reg_status_caption"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/smt_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextTitleSecondary"
            android:text="@string/smt1"/>
        <TextView
            android:id="@+id/smt_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextTitleSecondary"
            android:text="@string/smt2"/>
        <TextView
            android:id="@+id/smt_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextTitleSecondary"
            android:text="@string/smt3"/>
        <TextView
            android:id="@+id/smt_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextTitleSecondary"
            android:text="@string/smt4"/>
    </LinearLayout>

    <Button
        android:layout_below="@id/container_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reg"
        android:text="@string/btn_reg_text"
        style="@style/ButtonPrimary"/>
</RelativeLayout>
