<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="ScrollViewSize">

        <LinearLayout
            android:id="@+id/container_status_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_card"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_name"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_com_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_nrp"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_com_nrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_of_birth"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_com_birt_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="@color/text_dark" />

            <DatePicker
                android:id="@+id/f_com_tgl"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:datePickerMode="calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/text_dark" />

            <RadioGroup
                android:id="@+id/f_com_jk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/f_com_laki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/f_com_perempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/religion"
                android:textColor="@color/text_dark" />

            <Spinner
                android:id="@+id/f_com_religion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:spinnerMode="dropdown"
                android:entries="@array/religions"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_com_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_phone"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_com_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="phone" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_email"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_com_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="textEmailAddress" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/website_blog"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_com_web_blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="textWebEditText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dicipline"
                android:textColor="@color/text_dark" />

            <Spinner
                android:id="@+id/f_com_prodi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:spinnerMode="dropdown"
                android:entries="@array/prodi"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_name"
                android:textColor="@color/text_dark" />

            <Spinner
                android:id="@+id/f_com_kelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:spinnerMode="dropdown"
                android:entries="@array/kelas"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Periode"
                android:textColor="@color/text_dark" />

            <Spinner
                android:id="@+id/f_com_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:spinnerMode="dropdown"
                android:entries="@array/angkatan"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:textColor="@color/text_dark" />

            <Spinner
                android:id="@+id/f_com_smt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:spinnerMode="dropdown"
                android:entries="@array/smt"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/ButtonPrimary2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_status_1"
            android:text="@string/save_btn" />
    </RelativeLayout>
</ScrollView>