<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="ScrollViewSize">

        <LinearLayout
            android:id="@+id/container_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_card"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_name"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_reg_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_email"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_nrp"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_reg_nrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_phone"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_reg_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_payment_no"
                android:textColor="@color/text_dark" />

            <EditText
                android:id="@+id/f_reg_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edittext"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_photo"
                android:textColor="@color/text_dark" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/f_reg_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_edittext"
                    android:inputType="text" />

                <Button
                    android:id="@+id/f_reg_browse"
                    style="@style/ButtonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_toRightOf="@+id/f_reg_photo"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/reg_browse"
                    android:textColor="@color/text_bright"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/err_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#ffff0000"
                android:visibility="gone"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/f_reg_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_reg"
            style="@style/ButtonPrimary2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_status"
            android:text="@string/btn_reg_text" />
    </RelativeLayout>
</ScrollView>